--- a/tugas1.html
+++ b/tugas1.html
@@ -6,6 +6,6 @@
     <title>Judul untuk tugas pertama</title>
 </head>
 <body>
-    ini tugas fetch
+    ini tugas fetch untuk penilain satu
 </body>
 </html>
